--- a/classes/application.properties
+++ b/classes/application.properties
@@ -1,7 +1,7 @@
 server.port = 8090
-spring.datasource.url = jdbc:postgresql://localhost:5432/ticketdb
+spring.datasource.url = jdbc:postgresql://35.223.56.72:5432/ticketdb
 spring.datasource.username = postgres
-spring.datasource.password = 123456
+spring.datasource.password = 1234567ms
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto = create
 spring.jpa.show-sql = true
